--- a/plata.html
+++ b/plata.html
@@ -85,7 +85,18 @@
 
 <section id="manillas">
   <h2>Manillas</h2>
-  <!-- Aquí van las imágenes de manillas -->
+   <img src="img/manilla p1.jpg" alt="manilla p 1" />
+   <img src="img/manilla p2.jpg" alt="manilla p 2" />
+   <img src="img/manilla p3.jpg" alt="manilla p 3" />
+   <img src="img/manilla p4.jpg" alt="manilla p 4" />
+   <img src="img/manilla p5.jpg" alt="manilla p 5" />
+   <img src="img/manilla p6.jpg" alt="manilla p 6" />
+   <img src="img/manilla p7.jpg" alt="manilla p 7" />
+   <img src="img/manilla p8.jpg" alt="manilla p 8" />
+   <img src="img/manilla p9.jpg" alt="manilla p 9" />
+   <img src="img/manilla p10.jpg" alt="manilla p 10" />
+   <img src="img/manilla p11.jpg" alt="manilla p 11" />
+   <img src="img/manilla p12.jpg" alt="manilla p 12" />
 </section>
  <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
