--- a/oro.html
+++ b/oro.html
@@ -57,8 +57,20 @@
 
 <section id="aretes">
   <h2>Aretes</h2>
-  <!-- Aquí van las imágenes de aretes -->
-</section>
+   <img src="img/aretes o1.jpg" alt="aretes o 1" />
+   <img src="img/aretes o2.jpg" alt="aretes o 2" />
+   <img src="img/aretes o3.jpg" alt="aretes o 3" />
+   <img src="img/aretes o4.jpg" alt="aretes o 4" />
+   <img src="img/aretes o5.jpg" alt="aretes o 5" />
+   <img src="img/aretes o6.jpg" alt="aretes o 6" />
+   <img src="img/aretes o7.jpg" alt="aretes o 7" />
+   <img src="img/aretes o8.jpg" alt="aretes o 8" />
+   <img src="img/aretes o9.jpg" alt="aretes o 9" />
+   <img src="img/aretes o10.jpg" alt="aretes o 10" />
+   <img src="img/aretes o11.jpg" alt="aretes o 11" />
+   <img src="img/aretes o12.jpg" alt="aretes o 12" />
+   <img src="img/aretes o13.jpg" alt="aretes o 13" />
+  </section>
 
 <section id="manillas">
   <h2>Manillas</h2>
