--- a/oro.html
+++ b/oro.html
@@ -74,7 +74,17 @@
 
 <section id="manillas">
   <h2>Manillas</h2>
-  <img src="img/manilla oro1.jpg" alt="manilla oro 1" />
+   <img src="img/manilla o1.jpg" alt="manilla o 1" />
+   <img src="img/manilla o2.jpg" alt="manilla o 2" />
+   <img src="img/manilla o3.jpg" alt="manilla o 3" />
+   <img src="img/manilla o4.jpg" alt="manilla o 4" />
+   <img src="img/manilla o5.jpg" alt="manilla o 5" />
+   <img src="img/manilla o6.jpg" alt="manilla o 6" />
+   <img src="img/manilla o7.jpg" alt="manilla o 7" />
+   <img src="img/manilla o8.jpg" alt="manilla o 8" />
+   <img src="img/manilla o9.jpg" alt="manilla o 9" />
+   <img src="img/manilla o10.jpg" alt="manilla o 10" />
+   <img src="img/manilla o11.jpg" alt="manilla o 11" />
 </section>
  <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
