--- a/oro.html
+++ b/oro.html
@@ -85,6 +85,8 @@
    <img src="img/manilla o9.jpg" alt="manilla o 9" />
    <img src="img/manilla o10.jpg" alt="manilla o 10" />
    <img src="img/manilla o11.jpg" alt="manilla o 11" />
+  <img src="img/manilla o11.jpg" alt="manilla o 12" />
+  <img src="img/manilla o11.jpg" alt="manilla o 13" />
 </section>
  <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
