--- a/oro.html
+++ b/oro.html
@@ -53,6 +53,13 @@
   <img src="img/collar oro2.jpg" alt="collar oro 2" />
   <img src="img/collar oro3.jpg" alt="collar oro 3" />
   <img src="img/collar oro4.jpg" alt="collar oro 4" />
+  <img src="img/collar oro5.jpg" alt="collar oro 5" />
+  <img src="img/collar oro6.jpg" alt="collar oro 6" />
+  <img src="img/collar oro7.jpg" alt="collar oro 7" />
+  <img src="img/collar oro8.jpg" alt="collar oro 8" />
+  <img src="img/collar oro9.jpg" alt="collar oro 9" />
+  <img src="img/collar oro10.jpg" alt="collar oro 10" />
+  <img src="img/collar oro11.jpg" alt="collar oro 11" />
 </section>
 
 <section id="aretes">
@@ -85,8 +92,8 @@
    <img src="img/manilla o9.jpg" alt="manilla o 9" />
    <img src="img/manilla o10.jpg" alt="manilla o 10" />
    <img src="img/manilla o11.jpg" alt="manilla o 11" />
-  <img src="img/manilla o11.jpg" alt="manilla o 12" />
-  <img src="img/manilla o11.jpg" alt="manilla o 13" />
+  <img src="img/manilla o12.jpg" alt="manilla o 12" />
+  <img src="img/manilla o13.jpg" alt="manilla o 13" />
 </section>
  <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
