--- a/oro.html
+++ b/oro.html
@@ -45,6 +45,15 @@
   <img src="img/anillo de oro8.jpg" alt="anillo de oro 8" />
   <img src="img/anillo de oro9.jpg" alt="anillo de oro 9" />
   <img src="img/anillo de oro10.jpg" alt="anillo de oro 10" />
+  <img src="img/anillo de oro11.jpg" alt="anillo de oro 11" />
+  <img src="img/anillo de oro12.jpg" alt="anillo de oro 12" />
+  <img src="img/anillo de oro13.jpg" alt="anillo de oro 13" />
+  <img src="img/anillo de oro14.jpg" alt="anillo de oro 14" />
+  <img src="img/anillo de oro15.jpg" alt="anillo de oro 15" />
+  <img src="img/anillo de oro16.jpg" alt="anillo de oro 16" />
+  <img src="img/anillo de oro17.jpg" alt="anillo de oro 17" />
+  <img src="img/anillo de oro18.jpg" alt="anillo de oro 18" />
+  
 </section>
 
 <section id="collares">
