--- a/plata.html
+++ b/plata.html
@@ -65,6 +65,11 @@
   <img src="img/collar plata6.jpg" alt="collar plata 6" />
   <img src="img/collar plata7.jpg" alt="collar plata 7" />
   <img src="img/collar plata8.jpg" alt="collar plata 8" />
+   <img src="img/collar plata9.jpg" alt="collar plata 9" />
+   <img src="img/collar plata10.jpg" alt="collar plata 10" />
+   <img src="img/collar plata11.jpg" alt="collar plata 11" />
+   <img src="img/collar plata12.jpg" alt="collar plata 12" />
+   <img src="img/collar plata13.jpg" alt="collar plata 13" />
 </section>
 
 <section id="aretes">
