--- a/oro.html
+++ b/oro.html
@@ -25,7 +25,7 @@
   <main>
     <h1>Joyería en Oro</h1>
     <div class="galeria-productos">
-      <!-- Aquí irán las imágenes de productos de oro -->
+   <img src="img/oro12.jpg" alt="oro 12" />
     </div>
   </main>
 
