--- a/plata.html
+++ b/plata.html
@@ -25,6 +25,7 @@
   <main>
     <h1>Joyería en Plata</h1>
     <div class="galeria-productos">
+      <img src="img/plata 13.jpg" alt="plata 13" />
   
         
     </div>
