--- a/oro.html
+++ b/oro.html
@@ -35,74 +35,192 @@
 </html>
 <section id="anillos">
   <h2>Anillos</h2>
-  <img src="img/anillo de oro1.jpg" alt="anillo de oro 1" />
-  <img src="img/anillo de oro2.jpg" alt="anillo de oro 2" />
-  <img src="img/anillo de oro3.jpg" alt="anillo de oro 3" />
-  <img src="img/anillo de oro4.jpg" alt="anillo de oro 4" />
-  <img src="img/anillo de oro5.jpg" alt="anillo de oro 5" />
-  <img src="img/anillo de oro6.jpg" alt="anillo de oro 6" />
-  <img src="img/anillo de oro7.jpg" alt="anillo de oro 7" />
-  <img src="img/anillo de oro8.jpg" alt="anillo de oro 8" />
-  <img src="img/anillo de oro9.jpg" alt="anillo de oro 9" />
-  <img src="img/anillo de oro10.jpg" alt="anillo de oro 10" />
-  <img src="img/anillo de oro11.jpg" alt="anillo de oro 11" />
-  <img src="img/anillo de oro12.jpg" alt="anillo de oro 12" />
-  <img src="img/anillo de oro13.jpg" alt="anillo de oro 13" />
-  <img src="img/anillo de oro14.jpg" alt="anillo de oro 14" />
-  <img src="img/anillo de oro15.jpg" alt="anillo de oro 15" />
-  <img src="img/anillo de oro16.jpg" alt="anillo de oro 16" />
-  <img src="img/anillo de oro17.jpg" alt="anillo de oro 17" />
-  <img src="img/anillo de oro18.jpg" alt="anillo de oro 18" />
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 1">
+    <img src="img/anillo de oro1.jpg" alt="Anillo de oro 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 2">
+    <img src="img/anillo de oro2.jpg" alt="Anillo de oro 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 3">
+    <img src="img/anillo de oro3.jpg" alt="Anillo de oro 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 4">
+    <img src="img/anillo de oro4.jpg" alt="Anillo de oro 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 5">
+    <img src="img/anillo de oro5.jpg" alt="Anillo de oro 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 6">
+    <img src="img/anillo de oro6.jpg" alt="Anillo de oro 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 7">
+    <img src="img/anillo de oro7.jpg" alt="Anillo de oro 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 8">
+    <img src="img/anillo de oro8.jpg" alt="Anillo de oro 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 9">
+    <img src="img/anillo de oro9.jpg" alt="Anillo de oro 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 10">
+    <img src="img/anillo de oro10.jpg" alt="Anillo de oro 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 11">
+    <img src="img/anillo de oro11.jpg" alt="Anillo de oro 11">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 12">
+    <img src="img/anillo de oro12.jpg" alt="Anillo de oro 12">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 13">
+    <img src="img/anillo de oro13.jpg" alt="Anillo de oro 13">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 14">
+    <img src="img/anillo de oro14.jpg" alt="Anillo de oro 14">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 15">
+    <img src="img/anillo de oro15.jpg" alt="Anillo de oro 15">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 16">
+    <img src="img/anillo de oro16.jpg" alt="Anillo de oro 16">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 17">
+    <img src="img/anillo de oro17.jpg" alt="Anillo de oro 17">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo 18">
+    <img src="img/anillo de oro18.jpg" alt="Anillo de oro 18">
+  </a>
+</div>
   
 </section>
 
 <section id="collares">
   <h2>Collares</h2>
-  <img src="img/collar oro1.jpg" alt="collar oro 1" />
-  <img src="img/collar oro2.jpg" alt="collar oro 2" />
-  <img src="img/collar oro3.jpg" alt="collar oro 3" />
-  <img src="img/collar oro4.jpg" alt="collar oro 4" />
-  <img src="img/collar oro5.jpg" alt="collar oro 5" />
-  <img src="img/collar oro6.jpg" alt="collar oro 6" />
-  <img src="img/collar oro7.jpg" alt="collar oro 7" />
-  <img src="img/collar oro8.jpg" alt="collar oro 8" />
-  <img src="img/collar oro9.jpg" alt="collar oro 9" />
-  <img src="img/collar oro10.jpg" alt="collar oro 10" />
-  <img src="img/collar oro11.jpg" alt="collar oro 11" />
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 1">
+    <img src="img/collar oro1.jpg" alt="Collar oro 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 2">
+    <img src="img/collar oro2.jpg" alt="Collar oro 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 3">
+    <img src="img/collar oro3.jpg" alt="Collar oro 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 4">
+    <img src="img/collar oro4.jpg" alt="Collar oro 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 5">
+    <img src="img/collar oro5.jpg" alt="Collar oro 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 6">
+    <img src="img/collar oro6.jpg" alt="Collar oro 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 7">
+    <img src="img/collar oro7.jpg" alt="Collar oro 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 8">
+    <img src="img/collar oro8.jpg" alt="Collar oro 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 9">
+    <img src="img/collar oro9.jpg" alt="Collar oro 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 10">
+    <img src="img/collar oro10.jpg" alt="Collar oro 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar 11">
+    <img src="img/collar oro11.jpg" alt="Collar oro 11">
+  </a>
+</div>
 </section>
 
 <section id="aretes">
   <h2>Aretes</h2>
-   <img src="img/aretes o1.jpg" alt="aretes o 1" />
-   <img src="img/aretes o2.jpg" alt="aretes o 2" />
-   <img src="img/aretes o3.jpg" alt="aretes o 3" />
-   <img src="img/aretes o4.jpg" alt="aretes o 4" />
-   <img src="img/aretes o5.jpg" alt="aretes o 5" />
-   <img src="img/aretes o6.jpg" alt="aretes o 6" />
-   <img src="img/aretes o7.jpg" alt="aretes o 7" />
-   <img src="img/aretes o8.jpg" alt="aretes o 8" />
-   <img src="img/aretes o9.jpg" alt="aretes o 9" />
-   <img src="img/aretes o10.jpg" alt="aretes o 10" />
-   <img src="img/aretes o11.jpg" alt="aretes o 11" />
-   <img src="img/aretes o12.jpg" alt="aretes o 12" />
-   <img src="img/aretes o13.jpg" alt="aretes o 13" />
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 1">
+    <img src="img/aretes o1.jpg" alt="Aretes 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 2">
+    <img src="img/aretes o2.jpg" alt="Aretes 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 3">
+    <img src="img/aretes o3.jpg" alt="Aretes 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 4">
+    <img src="img/aretes o4.jpg" alt="Aretes 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 5">
+    <img src="img/aretes o5.jpg" alt="Aretes 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 6">
+    <img src="img/aretes 06.jpg" alt="Aretes 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 7">
+    <img src="img/aretes o7.jpg" alt="Aretes 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 8">
+    <img src="img/aretes o8.jpg" alt="Aretes 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 9">
+    <img src="img/aretes o9.jpg" alt="Aretes 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 10">
+    <img src="img/aretes o10.jpg" alt="Aretes 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 11">
+    <img src="img/aretes o11.jpg" alt="Aretes 11">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 12">
+    <img src="img/aretes o12.jpg" alt="Aretes 12">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 13">
+    <img src="img/aretes o13.jpg" alt="Aretes 13">
+  </a>
+</div>
   </section>
 
 <section id="manillas">
   <h2>Manillas</h2>
-   <img src="img/manilla o1.jpg" alt="manilla o 1" />
-   <img src="img/manilla o2.jpg" alt="manilla o 2" />
-   <img src="img/manilla o3.jpg" alt="manilla o 3" />
-   <img src="img/manilla o4.jpg" alt="manilla o 4" />
-   <img src="img/manilla o5.jpg" alt="manilla o 5" />
-   <img src="img/manilla o6.jpg" alt="manilla o 6" />
-   <img src="img/manilla o7.jpg" alt="manilla o 7" />
-   <img src="img/manilla o8.jpg" alt="manilla o 8" />
-   <img src="img/manilla o9.jpg" alt="manilla o 9" />
-   <img src="img/manilla o10.jpg" alt="manilla o 10" />
-   <img src="img/manilla o11.jpg" alt="manilla o 11" />
-  <img src="img/manilla o12.jpg" alt="manilla o 12" />
-  <img src="img/manilla o13.jpg" alt="manilla o 13" />
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 1">
+    <img src="img/manilla 01.jpg" alt="Manilla 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 2">
+    <img src="img/manilla 02.jpg" alt="Manilla 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 3">
+    <img src="img/manilla 03.jpg" alt="Manilla 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 4">
+    <img src="img/manilla 04.jpg" alt="Manilla 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 5">
+    <img src="img/manilla 05.jpg" alt="Manilla 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 6">
+    <img src="img/manilla 06.jpg" alt="Manilla 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 7">
+    <img src="img/manilla 07.jpg" alt="Manilla 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 8">
+    <img src="img/manilla 08.jpg" alt="Manilla 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 9">
+    <img src="img/manilla 09.jpg" alt="Manilla 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 10">
+    <img src="img/manilla 10.jpg" alt="Manilla 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 11">
+    <img src="img/manilla 11.jpg" alt="Manilla 11">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 12">
+    <img src="img/manilla 12.jpg" alt="Manilla 12">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 13">
+    <img src="img/manilla 13.jpg" alt="Manilla 13">
+  </a>
+</div>
 </section>
  <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
