--- a/plata.html
+++ b/plata.html
@@ -36,73 +36,192 @@
 </html>
 <section id="anillos">
   <h2>Anillos</h2>
-  <img src="img/anillo de plata1.jpg" alt="anillo de plata1" />
-  <img src="img/anillo de plata2.jpg" alt="anillo de plata 2" />
-  <img src="img/anillo de plata3.jpg" alt="anillo de plata 3" />
-  <img src="img/anillo de plata4.jpg" alt="anillo de plata 4" />
-  <img src="img/anillo de plata5.jpg" alt="anillo de plata 5" />
-  <img src="img/anillo de plata6.jpg" alt="anillo de plata 6" />
-  <img src="img/anillo de plata7.jpg" alt="anillo de plata 7" />
-  <img src="img/anillo de plata8.jpg" alt="anillo de plata 8" />
-  <img src="img/anillo de plata9.jpg" alt="anillo de plata 9" />
-  <img src="img/anillo de plata10.jpg" alt="anillo de plata 10" />
-  <img src="img/anillo de plata11.jpg" alt="anillo de plata 11" />
-  <img src="img/anillo de plata12.jpg" alt="anillo de plata 12" />
-  <img src="img/anillo de plata13.jpg" alt="anillo de plata 13" />
-  <img src="img/anillo de plata14.jpg" alt="anillo de plata 14" />
-  <img src="img/anillo de plata15.jpg" alt="anillo de plata 15" />
-  <img src="img/anillo de plata16.jpg" alt="anillo de plata 16" />
-  <img src="img/anillo de plata17.jpg" alt="anillo de plata 17" />
-   <img src="img/anillo plata morado.jpg" alt="anillo plata morado" />
+<!-- ANILLOS DE PLATA -->
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 1">
+    <img src="img/anillo de plata01.jpg" alt="Anillo de plata 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 2">
+    <img src="img/anillo de plata02.jpg" alt="Anillo de plata 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 3">
+    <img src="img/anillo de plata03.jpg" alt="Anillo de plata 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 4">
+    <img src="img/anillo de plata04.jpg" alt="Anillo de plata 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 5">
+    <img src="img/anillo de plata05.jpg" alt="Anillo de plata 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 6">
+    <img src="img/anillo de plata06.jpg" alt="Anillo de plata 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 7">
+    <img src="img/anillo de plata07.jpg" alt="Anillo de plata 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 8">
+    <img src="img/anillo de plata08.jpg" alt="Anillo de plata 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 9">
+    <img src="img/anillo de plata09.jpg" alt="Anillo de plata 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 10">
+    <img src="img/anillo de plata10.jpg" alt="Anillo de plata 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 11">
+    <img src="img/anillo de plata11.jpg" alt="Anillo de plata 11">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 12">
+    <img src="img/anillo de plata12.jpg" alt="Anillo de plata 12">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 13">
+    <img src="img/anillo de plata13.jpg" alt="Anillo de plata 13">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 14">
+    <img src="img/anillo de plata14.jpg" alt="Anillo de plata 14">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 15">
+    <img src="img/anillo de plata15.jpg" alt="Anillo de plata 15">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 16">
+    <img src="img/anillo de plata16.jpg" alt="Anillo de plata 16">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo de plata 17">
+    <img src="img/anillo de plata17.jpg" alt="Anillo de plata 17">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el anillo plata morado">
+    <img src="img/anillo plata morado.jpg" alt="Anillo plata morado">
+  </a>
+</div>
 </section>
 
 <section id="collares">
   <h2>Collares</h2>
-  <img src="img/collar plata1.jpg" alt="collar plata 1" />
-  <img src="img/collar plata2.jpg" alt="collar plata 2" />
-  <img src="img/collar plata3.jpg" alt="collar plata 3" />
-  <img src="img/collar plata4.jpg" alt="collar plata 4" />
-  <img src="img/collar plata5.jpg" alt="collar plata 5" />
-  <img src="img/collar plata6.jpg" alt="collar plata 6" />
-  <img src="img/collar plata7.jpg" alt="collar plata 7" />
-  <img src="img/collar plata8.jpg" alt="collar plata 8" />
-   <img src="img/collar plata9.jpg" alt="collar plata 9" />
-   <img src="img/collar plata10.jpg" alt="collar plata 10" />
-   <img src="img/collar plata11.jpg" alt="collar plata 11" />
-   <img src="img/collar plata12.jpg" alt="collar plata 12" />
-   <img src="img/collar plata13.jpg" alt="collar plata 13" />
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 1">
+    <img src="img/collar plata1.jpg" alt="Collar plata 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 2">
+    <img src="img/collar plata2.jpg" alt="Collar plata 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 3">
+    <img src="img/collar plata3.jpg" alt="Collar plata 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 4">
+    <img src="img/collar plata4.jpg" alt="Collar plata 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 5">
+    <img src="img/collar plata05.jpg" alt="Collar plata 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 6">
+    <img src="img/collar plata6.jpg" alt="Collar plata 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 7">
+    <img src="img/collar plata7.jpg" alt="Collar plata 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 8">
+    <img src="img/collar plata08.jpg" alt="Collar plata 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 9">
+    <img src="img/collar plata09.jpg" alt="Collar plata 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 10">
+    <img src="img/collar plata10.jpg" alt="Collar plata 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 11">
+    <img src="img/collar plata11.jpg" alt="Collar plata 11">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 12">
+    <img src="img/collar plata12.jpg" alt="Collar plata 12">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en el collar de plata 13">
+    <img src="img/collar plata13.jpg" alt="Collar plata 13">
+  </a>
+</div>
 </section>
 
 <section id="aretes">
   <h2>Aretes</h2>
-   <img src="img/arete p1.jpg" alt="arete p 1" />
-    <img src="img/arete p2.jpg" alt="arete p 2" />
-    <img src="img/arete p3.jpg" alt="arete p 3" />
-    <img src="img/arete p4.jpg" alt="arete p 4" />
-    <img src="img/arete p5.jpg" alt="arete p 5" />
-    <img src="img/arete p6.jpg" alt="arete p 6" />
-    <img src="img/arete p7.jpg" alt="arete p 7" />
-    <img src="img/arete p8.jpg" alt="arete p 8" />
-    <img src="img/arete p9.jpg" alt="arete p 9" />
-    <img src="img/arete p10.jpg" alt="arete p 10" />
-    <img src="img/arete p11.jpg" alt="arete p 11" />
-    <img src="img/arete p12.jpg" alt="arete p 12" />
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 1">
+    <img src="img/arete p1.jpg" alt="Arete p 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 2">
+    <img src="img/arete p2.jpg" alt="Arete p 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 3">
+    <img src="img/arete p3.jpg" alt="Arete p 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 4">
+    <img src="img/arete p4.jpg" alt="Arete p 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 5">
+    <img src="img/arete p5.jpg" alt="Arete p 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 6">
+    <img src="img/arete p6.jpg" alt="Arete p 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 7">
+    <img src="img/arete p7.jpg" alt="Arete p 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 8">
+    <img src="img/arete p8.jpg" alt="Arete p 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 9">
+    <img src="img/arete p9.jpg" alt="Arete p 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 10">
+    <img src="img/arete p10.jpg" alt="Arete p 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 11">
+    <img src="img/arete p11.jpg" alt="Arete p 11">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes de plata 12">
+    <img src="img/arete p12.jpg" alt="Arete p 12">
+  </a>
+</div>
 </section>
 
 <section id="manillas">
   <h2>Manillas</h2>
-   <img src="img/manilla p1.jpg" alt="manilla p 1" />
-   <img src="img/manilla p2.jpg" alt="manilla p 2" />
-   <img src="img/manilla p3.jpg" alt="manilla p 3" />
-   <img src="img/manilla p4.jpg" alt="manilla p 4" />
-   <img src="img/manilla p5.jpg" alt="manilla p 5" />
-   <img src="img/manilla p6.jpg" alt="manilla p 6" />
-   <img src="img/manilla p7.jpg" alt="manilla p 7" />
-   <img src="img/manilla p8.jpg" alt="manilla p 8" />
-   <img src="img/manilla p9.jpg" alt="manilla p 9" />
-   <img src="img/manilla p10.jpg" alt="manilla p 10" />
-   <img src="img/manilla p11.jpg" alt="manilla p 11" />
-   <img src="img/manilla p12.jpg" alt="manilla p 12" />
+<div class="galeria">
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 1">
+    <img src="img/manilla p1.jpg" alt="Manilla p 1">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 2">
+    <img src="img/manilla p2.jpg" alt="Manilla p 2">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 3">
+    <img src="img/manilla p3.jpg" alt="Manilla p 3">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 4">
+    <img src="img/manilla p4.jpg" alt="Manilla p 4">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 5">
+    <img src="img/manilla p5.jpg" alt="Manilla p 5">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 6">
+    <img src="img/manilla p6.jpg" alt="Manilla p 6">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 7">
+    <img src="img/manilla p7.jpg" alt="Manilla p 7">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 8">
+    <img src="img/manilla p8.jpg" alt="Manilla p 8">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 9">
+    <img src="img/manilla p9.jpg" alt="Manilla p 9">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 10">
+    <img src="img/manilla p10.jpg" alt="Manilla p 10">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 11">
+    <img src="img/manilla p11.jpg" alt="Manilla p 11">
+  </a>
+  <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla de plata 12">
+    <img src="img/manilla p12.jpg" alt="Manilla p 12">
+  </a>
+</div>
 </section>
  <div style="text-align: center; margin-top: 30px;">
   <a href="https://wa.me/573155588648" target="_blank" style="margin-right: 15px;">
