--- a/oro.html
+++ b/oro.html
@@ -152,7 +152,7 @@
     <img src="img/aretes o5.jpg" alt="Aretes 5">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 6">
-    <img src="img/aretes 06.jpg" alt="Aretes 6">
+    <img src="img/aretes o6.jpg" alt="Aretes 6">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en los aretes 7">
     <img src="img/aretes o7.jpg" alt="Aretes 7">
@@ -182,43 +182,43 @@
   <h2>Manillas</h2>
 <div class="galeria">
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 1">
-    <img src="img/manilla 01.jpg" alt="Manilla 1">
+    <img src="img/manilla o1.jpg" alt="Manilla 1">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 2">
-    <img src="img/manilla 02.jpg" alt="Manilla 2">
+    <img src="img/manilla o2.jpg" alt="Manilla 2">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 3">
-    <img src="img/manilla 03.jpg" alt="Manilla 3">
+    <img src="img/manilla o3.jpg" alt="Manilla 3">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 4">
-    <img src="img/manilla 04.jpg" alt="Manilla 4">
+    <img src="img/manilla o4.jpg" alt="Manilla 4">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 5">
-    <img src="img/manilla 05.jpg" alt="Manilla 5">
+    <img src="img/manilla o5.jpg" alt="Manilla 5">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 6">
-    <img src="img/manilla 06.jpg" alt="Manilla 6">
+    <img src="img/manilla o6.jpg" alt="Manilla 6">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 7">
-    <img src="img/manilla 07.jpg" alt="Manilla 7">
+    <img src="img/manilla o7.jpg" alt="Manilla 7">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 8">
-    <img src="img/manilla 08.jpg" alt="Manilla 8">
+    <img src="img/manilla o8.jpg" alt="Manilla 8">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 9">
-    <img src="img/manilla 09.jpg" alt="Manilla 9">
+    <img src="img/manilla o9.jpg" alt="Manilla 9">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 10">
-    <img src="img/manilla 10.jpg" alt="Manilla 10">
+    <img src="img/manilla o10.jpg" alt="Manilla 10">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 11">
-    <img src="img/manilla 11.jpg" alt="Manilla 11">
+    <img src="img/manilla o11.jpg" alt="Manilla 11">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 12">
-    <img src="img/manilla 12.jpg" alt="Manilla 12">
+    <img src="img/manilla o12.jpg" alt="Manilla 12">
   </a>
   <a href="https://wa.me/573155588648?text=Hola, estoy interesado en la manilla 13">
-    <img src="img/manilla 13.jpg" alt="Manilla 13">
+    <img src="img/manilla o13.jpg" alt="Manilla 13">
   </a>
 </div>
 </section>
