--- a/plata.html
+++ b/plata.html
@@ -25,7 +25,7 @@
   <main>
     <h1>Joyería en Plata</h1>
     <div class="galeria-productos">
-      <img src="img/plata13.jpg" alt="plata 13" />
+      <img src="img/plata13.jpg" alt="plata13" style="width: 300px; height: auto; border: 2px solid gold; border-radius: 10px;">
   
         
     </div>
