--- a/oro.html
+++ b/oro.html
@@ -25,7 +25,7 @@
   <main>
     <h1>Joyería en Oro</h1>
     <div class="galeria-productos">
-   <img src="img/oro12.jpg" alt="oro 12" />
+  <img src="img/oro12.jpg" alt="oro12" style="width: 300px; height: auto; border: 2px solid gold; border-radius: 10px;">
     </div>
   </main>
 
