--- a/plata.html
+++ b/plata.html
@@ -25,8 +25,7 @@
   <main>
     <h1>Joyería en Plata</h1>
     <div class="galeria-productos">
-      <img src="img/plata13.jpg" alt="plata13" style="width: 300px; height: auto; border: 2px solid gold; border-radius: 10px;">
-  
+      <img src="img/lingote_plata.jpg"alt="Lingote de plata"style="width: 500px; height: auto; display: block; margin: 0 auto; border: 2px solid gold; border-radius: 10px;">
         
     </div>
   </main>
