--- a/oro.html
+++ b/oro.html
@@ -25,7 +25,7 @@
   <main>
     <h1>Joyería en Oro</h1>
     <div class="galeria-productos">
-  <img src="img/oro12.jpg" alt="oro12" style="width: 300px; height: auto; border: 2px solid gold; border-radius: 10px;">
+ <img src="img/lingote_plata.jpg"alt="Lingote de plata"style="width: 500px; height: auto; display: block; margin: 0 auto; border: 2px solid gold; border-radius: 10px;">
     </div>
   </main>
 
