--- a/oro.html
+++ b/oro.html
@@ -24,7 +24,7 @@
 
   <main>
     <h1>Joyería en Oro</h1>
-<img src="img/lingote_plata.jpg"alt="Lingote de plata"style="width: 500px; height: auto; display: block; margin: 0 auto; border: 2px solid gold; border-radius: 10px;">
+<img src="img/plata13.jpg"alt="plata13"style="width: 500px; height: auto; display: block; margin: 0 auto; border: 2px solid gold; border-radius: 10px;">
     </div>
   </main>
 
