--- a/plata.html
+++ b/plata.html
@@ -24,7 +24,9 @@
 
   <main>
     <h1>Joyería en Plata</h1>
-      <img src="img/plata13.jpg"alt="plata13"style="width: 500px; height: auto; display: block; margin: 0 auto; border: 2px solid gold; border-radius: 10px;">
+     <img src="img/plata13.jpg"
+     alt="Plata"
+     style="width: 600px !important; height: auto !important; display: block; margin: 30px auto !important; border: 3px solid gold; border-radius: 12px;">
         
     </div>
   </main>
