--- a/oro.html
+++ b/oro.html
@@ -24,7 +24,9 @@
 
   <main>
     <h1>Joyería en Oro</h1>
-<img src="img/oro12.jpg"alt="oro12"style="width: 500px; height: auto; display: block; margin: 0 auto; border: 2px solid gold; border-radius: 10px;">
+<img src="img/oro12.jpg"
+     alt="oro12"
+     style="width: 600px !important; height: auto !important; display: block; margin: 30px auto !important; border: 3px solid gold; border-radius: 12px;">
     </div>
   </main>
 
