--- a/plata.html
+++ b/plata.html
@@ -25,7 +25,7 @@
   <main>
     <h1>Joyería en Plata</h1>
      <img src="img/plata13.jpg"
-     alt="Plata"
+     alt="Plata13"
      style="width: 600px !important; height: auto !important; display: block; margin: 30px auto !important; border: 3px solid gold; border-radius: 12px;">
         
     </div>
