--- a/plata.html
+++ b/plata.html
@@ -24,9 +24,12 @@
 
   <main>
     <h1>Joyería en Plata</h1>
-     <img src="img/plata13.jpg"
-     alt="Plata13"
-     style="width: 600px !important; height: auto !important; display: block; margin: 30px auto !important; border: 3px solid gold; border-radius: 12px;">
+   
+<div style="width: 100%; display: flex; justify-content: center; margin: 30px 0;">
+  <img src="img/plata13.jpg"
+       alt="Plata13"
+       style="width: 600px; max-width: 90vw; height: auto; border: 3px solid gold; border-radius: 12px;">
+</div>
         
     </div>
   </main>
