--- a/oro.html
+++ b/oro.html
@@ -24,10 +24,11 @@
 
   <main>
     <h1>Joyería en Oro</h1>
-<img src="img/oro12.jpg"
-     alt="oro12"
-     style="width: 600px !important; height: auto !important; display: block; margin: 30px auto !important; border: 3px solid gold; border-radius: 12px;">
-    </div>
+<div style="width: 100%; display: flex; justify-content: center; margin: 30px 0;">
+  <img src="img/oro12.jpg"
+       alt="oro12"
+       style="width: 600px; max-width: 90vw; height: auto; border: 3px solid gold; border-radius: 12px;">
+</div>
   </main>
 
 
