--- a/plata.html
+++ b/plata.html
@@ -7,12 +7,19 @@
 </head>
 <body>
   <header>
-    <img src="logo.png.PNG" alt="Logo Goyery Luxe" class="logo">
-    <nav>
-   <a href="index.html" class="activo">Inicio</a>
-   <a href="oro.html">Joyería en Oro</a>
-  <a href="plata.html">Joyería en Plata</a>
-  <a href="lotes.html">Lotes de esmeralda</a>
+   <nav class="navbar">
+  <div class="logo">
+    <img src="img/logo.png" alt="Goyery Luxe Logo">
+  </div>
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">&#9776;</label>
+  <ul class="nav-links">
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="oro.html">Joyería en Oro</a></li>
+    <li><a href="plata.html">Joyería en Plata</a></li>
+    <li><a href="lotes.html">Lotes de esmeralda</a></li>
+  </ul>
+</nav>
       </nav>
     <div class="sub-menu">
   <a href="#anillos">Anillos</a>
