--- a/oro.html
+++ b/oro.html
@@ -9,7 +9,7 @@
   <header>
    <nav class="navbar">
   <div class="logo">
-    <img src="img/logo.png" alt="Goyery Luxe Logo">
+    <img src="img/logo.png.PNG" alt="Goyery Luxe Logo">
   </div>
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="menu-icon">&#9776;</label>
