--- a/plata.html
+++ b/plata.html
@@ -8,7 +8,7 @@
 <body>
   <header>
    <nav class="navbar">
-  <div class="logo">
+  <div class="logo.png">
     <img src="img/logo.png.PNG" alt="Goyery Luxe Logo">
   </div>
   <input type="checkbox" id="menu-toggle">
