--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
 <nav class="navbar">
-  <div class="logo.png">
-    <img src="img/logo.png.PNG" alt="Goyery Luxe Logo">
+  <div class="logo">
+    <img src="logo.png.PNG" alt="Goyery Luxe Logo">
   </div>
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="menu-icon">&#9776;</label>
