--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 <body>
   <header>
 <nav class="navbar">
-  <div class="logo">
-    <img src="logo.png.PNG" alt="Goyery Luxe Logo">
-  </div>
-  <input type="checkbox" id="menu-toggle">
+ <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="menu-icon">&#9776;</label>
   <ul class="nav-links">
     <li><a href="index.html">Inicio</a></li>
@@ -21,6 +18,11 @@
     <li><a href="lotes.html">Lotes de esmeralda</a></li>
   </ul>
 </nav>
+    <div style="text-align: center; margin: 20px 0;">
+  <img src="logo.png.PNG"
+       alt="Goyery Luxe"
+       style="width: 200px; max-width: 90vw; border: 2px solid gold; border-radius: 12px;">
+</div>
     <h1>Bienvenidos a Goyery Luxe</h1>
   </header>
 
