--- a/lotes.html
+++ b/lotes.html
@@ -8,9 +8,6 @@
 <body>
   <header>
   <nav class="navbar">
-  <div class="logo">
-    <img src="logo.png.PNG" alt="Goyery Luxe Logo">
-  </div>
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="menu-icon">&#9776;</label>
   <ul class="nav-links">
@@ -20,6 +17,11 @@
     <li><a href="lotes.html">Lotes de esmeralda</a></li>
   </ul>
 </nav>
+     <div style="text-align: center; margin: 20px 0;">
+  <img src="logo.png.PNG"
+       alt="Goyery Luxe"
+       style="width: 200px; max-width: 90vw; border: 2px solid gold; border-radius: 12px;">
+</div>
     <h1>exelentes lotes</h1>
 
  </header>
