--- a/plata.html
+++ b/plata.html
@@ -22,11 +22,12 @@
        alt="Goyery Luxe"
        style="width: 200px; max-width: 90vw; border: 2px solid gold; border-radius: 12px;">
 </div>
-   <div class="subnav">
+ <div class="subnav">
   <a href="#anillos">Anillos</a>
   <a href="#collares">Collares</a>
   <a href="#aretes">Aretes</a>
   <a href="#manillas">Manillas</a>
+</div>
 </div>
   </header>
 
