--- a/oro.html
+++ b/oro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Joyería en Oro - Goyery Luxe</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
