--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Goyery Luxe</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style_corregido_subnav_funciona.css">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lora:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
