--- a/lotes.html
+++ b/lotes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>lotes a tu gusto - Goyery Luxe</title>
-  <link rel="stylesheet" href="style_corregido_subnav_funciona.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
