--- a/plata.html
+++ b/plata.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Joyería en Plata - Goyery Luxe</title>
-  <link rel="stylesheet" href="style_corregido_subnav_funciona.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
