--- a/lotes.html
+++ b/lotes.html
@@ -8,12 +8,14 @@
 <body>
   <header>
 <nav class="navbar">
-  <ul class="nav-links">
-    <li><a href="index.html">Inicio</a></li>
-    <li><a href="oro.html">Joyería en Oro</a></li>
-    <li><a href="plata.html">Joyería en Plata</a></li>
-    <li><a href="lotes.html">Lotes de esmeralda</a></li>
-  </ul>
+  <div class="nav-container">
+    <ul class="nav-links">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="oro.html">Joyería en Oro</a></li>
+      <li><a href="plata.html">Joyería en Plata</a></li>
+      <li><a href="lotes.html">Lotes de esmeralda</a></li>
+    </ul>
+  </div>
 </nav>
      <div style="text-align: center; margin: 20px 0;">
   <img src="logo.png.PNG"
